--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,8 @@
-set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 cmake_minimum_required(VERSION 3.16)
+project(fDSST)
+
+set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
+
 set(CMAKE_CUDA_COMPILER /usr/local/cuda/bin/nvcc)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
@@ -14,14 +17,14 @@ include_directories(${GLIB2_INCLUDE_DIR})
 include_directories(${OpenCV_INCLUDE_DIRS})
 include_directories(${DS_INCLUDES_DIR})
 include_directories(${CMAKE_SOURCE_DIR}/includes)
+include_directories(/usr/local/cuda-12.6/targets/x86_64-linux/include/)
 
 file(GLOB TRACK ${CMAKE_SOURCE_DIR}/src/*.cpp)
 
-# set(CMAKE_CXX_FLAGS "-Wall -Wextra -fPIC")
-# set(CMAKE_CUDA_FLAGS "--compiler-options -fPIC")
 set(CMAKE_CXX_FLAGS "-Wall -Wextra -fPIC -g")
 set(CMAKE_CUDA_FLAGS "--compiler-options -fPIC -g")
 
 link_directories(${DS_LIBS_DIR})
-add_library(ByteTracker SHARED ${TRACK})
-target_link_libraries(ByteTracker nvds_meta)
+add_library(fDSST SHARED ${TRACK})
+
+target_link_libraries(fDSST nvds_meta ${OpenCV_LIBS})
